--- a/app/public/index.html
+++ b/app/public/index.html
@@ -35,4 +35,25 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script src="https://as.alipayobjects.com/g/component/fastclick/1.0.6/fastclick.js"></script>
+  <script>
+    if ("addEventListener" in document) {
+      document.addEventListener(
+        "DOMContentLoaded",
+        function() {
+          FastClick.attach(document.body);
+        },
+        false
+      );
+    }
+    if (!window.Promise) {
+      document.writeln(
+        '<script src="https://as.alipayobjects.com/g/component/es6-promise/3.2.2/es6-promise.min.js"' +
+          ">" +
+          "<" +
+          "/" +
+          "script>"
+      );
+    }
+  </script>
 </html>
