--- a/app/public/index.html
+++ b/app/public/index.html
@@ -20,6 +20,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title> </title>
+
+    <!--识别二维码-->
+    <!--<script src="llqrcode.js"></script>-->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
