--- a/app/public/index.html
+++ b/app/public/index.html
@@ -22,7 +22,9 @@
     <title> </title>
 
     <!--识别二维码-->
-    <!--<script src="llqrcode.js"></script>-->
+    <!--<script src="https://fe.imdada.cn/winner/llqrcode_20190723_172015.js"></script>-->
+
+    <script src="%PUBLIC_URL%/llqrcode.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
