--- a/app/public/index.html
+++ b/app/public/index.html
@@ -25,6 +25,7 @@
     <!--<script src="https://fe.imdada.cn/winner/llqrcode_20190723_172015.js"></script>-->
 
     <script src="%PUBLIC_URL%/llqrcode.js"></script>
+    <!--<script defer id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=46514fb7-9da7-4496-b5c3-d942215d5215"></script>-->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
