--- a/app/public/index.html
+++ b/app/public/index.html
@@ -5,6 +5,7 @@
     <!--<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0,user-scalable=no"/>
     <meta name="theme-color" content="#000000" />
+    <meta http-equiv="X-Frame-Options" content="ALLOW-FROM">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -20,7 +21,6 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title> </title>
-
     <script src="%PUBLIC_URL%/llqrcode.js"></script>
     <!--<script defer id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=46514fb7-9da7-4496-b5c3-d942215d5215"></script>-->
   </head>
